--- a/samples/SentimentAnalyzerCustomSkill/cpp/Skill/FaceSentimentAnalyzer/packages.config
+++ b/samples/SentimentAnalyzerCustomSkill/cpp/Skill/FaceSentimentAnalyzer/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AI.Skills.SkillInterfacePreview" version="0.6.0" targetFramework="native" />
-  <package id="Microsoft.Windows.CppWinRT" version="2.0.190730.2" targetFramework="native" />
+  <package id="Microsoft.AI.Skills.SkillInterface" version="1.0.0" targetFramework="native" />
+  <package id="Microsoft.Windows.CppWinRT" version="2.0.200316.3" targetFramework="native" />
 </packages>
