--- a/samples/SentimentAnalyzerCustomSkill/cs/Skill/FaceSentimentAnalyzer/Contoso.FaceSentimentAnalyzer_CS.csproj
+++ b/samples/SentimentAnalyzerCustomSkill/cs/Skill/FaceSentimentAnalyzer/Contoso.FaceSentimentAnalyzer_CS.csproj
@@ -126,8 +126,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AI.Skills.SkillInterfacePreview">
-      <Version>0.6.0</Version>
+    <PackageReference Include="Microsoft.AI.Skills.SkillInterface">
+      <Version>1.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.8</Version>
